@@ -1,12 +1,15 @@
 package com.signify.config;
 
 import com.signify.modules.auth.util.JwtUtil;
+import com.signify.modules.user.model.User;
+import com.signify.modules.user.repository.UserRepository;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -14,17 +17,19 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
 public class JwtFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
+    private final UserRepository userRepository;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
-        
+
         final String authHeader = request.getHeader("Authorization");
         final String jwt;
         final String userId;
@@ -38,15 +43,22 @@ public class JwtFilter extends OncePerRequestFilter {
         userId = jwtUtil.extractUserId(jwt);
 
         if (userId != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            // Since we are using simple JWT authentication without a full UserDetailsService for now,
-            // we'll just create an authentication token with the userId.
-            UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                    userId, null, Collections.emptyList());
-            
-            authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-            SecurityContextHolder.getContext().setAuthentication(authToken);
+            // Load the user's role so Spring Security `hasRole(...)` checks work.
+            // Accounts that are not ACTIVE are treated as unauthenticated.
+            User user = userRepository.findById(userId).orElse(null);
+            if (user != null && (user.getStatus() == null || "ACTIVE".equals(user.getStatus()))) {
+                List<SimpleGrantedAuthority> authorities = user.getRole() != null
+                        ? List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()))
+                        : Collections.emptyList();
+
+                UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
+                        userId, null, authorities);
+
+                authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                SecurityContextHolder.getContext().setAuthentication(authToken);
+            }
         }
-        
+
         filterChain.doFilter(request, response);
     }
 }
